--- a/gallery.html
+++ b/gallery.html
@@ -9,12 +9,12 @@
   <body>
     <h1>Andrei's Image Gallery</h1>
     <div class="gallery">
-      <img src="images/1.jpg" alt="">
-      <img src="images/2.jpg" alt="">
-      <img src="images/3.jpg" alt="">
-      <img src="images/4.jpg" alt="">
-      <img src="images/5.jpg" alt="">
-      <img src="images/6.jpg" alt="">
+      <img src="1.jpg" alt="">
+      <img src="2.jpg" alt="">
+      <img src="3.jpg" alt="">
+      <img src="4.jpg" alt="">
+      <img src="5.jpg" alt="">
+      <img src="6.jpg" alt="">
     </div>
   </body>
 </html>
