--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrei's Image Gallery</title>
-    <link rel="stylesheet" type="text/css" href="css/gallery.css"
+    <link rel="stylesheet" type="text/css" href="gallery.css"
   </head>
   <body>
     <h1>Andrei's Image Gallery</h1>
